force-app/main/default/objects/Fintech__c/Fintech__c.object-meta.xml
<CustomObject>
    <description>Tracks data related to out Fintech partners</description>
    <label>FinTech</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Fintech Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FinTechs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>