force-app/main/default/objects/Fintech__c/fields/How_Do_They_Make_Money__c.field-meta.xml
<CustomField>
    <fullName>How_Do_They_Make_Money__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>How Do They Make Money</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>