force-app/main/default/objects/Fintech__c/fields/Initial_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Meeting_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Initial Meeting Date</label>
    <type>Date</type>
</CustomField>