force-app/main/default/objects/Fintech__c/fields/Intake_Channel__c.field-meta.xml
<CustomField>
    <fullName>Intake_Channel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Intake Channel</label>
    <length>50</length>
    <type>Text</type>
</CustomField>