force-app/main/default/objects/Fintech__c/fields/Potential_for_FNB__c.field-meta.xml
<CustomField>
    <fullName>Potential_for_FNB__c</fullName>
    <label>Potential for FNB</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LO</fullName>
            </value>
            <value>
                <fullName>MED</fullName>
            </value>
            <value>
                <fullName>HI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>