force-app/main/default/objects/Fintech__c/fields/Type_of_FinTech__c.field-meta.xml
<CustomField>
    <fullName>Type_of_FinTech__c</fullName>
    <label>Type of FinTech</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fraud/Retail Banking</fullName>
            </value>
            <value>
                <fullName>Wealth &amp; Asset Management</fullName>
            </value>
            <value>
                <fullName>Lending &amp; Financing</fullName>
            </value>
            <value>
                <fullName>Payments &amp; Transfers</fullName>
            </value>
            <value>
                <fullName>Markets &amp; Exchanges</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Blockchain</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>