force-app/main/default/objects/Fintech__c/fields/Type_of_Involvement__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Involvement__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Type of Involvement</label>
    <length>50</length>
    <type>Text</type>
</CustomField>